<resources>
    <string name="app_name">Login-Register</string>
    <string name="action_settings">Settings</string>
    <string name="user_name"><u><i>User Name</i></u></string>
    <string name="pwd"><u><i>Password</i></u></string>
    <string name="txt_login"><u><i>Login</i></u></string>
    <string name="btn_reset"><u><i>Reset</i></u></string>
    <string name="btn_login"><u><i>Login!</i></u></string>
</resources>
